--- a/tcm/modules/web/src/main/webapp/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 </f:metadata>
 
 <h:body>
-    <h:outputText value="#{sessionControl.redirect}" style="display: none;"/>
+    <h:outputText value="#{sessionControl.atStart}" style="display: none;"/>
 </h:body>
 
 </html>
