--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-        <div class="Container100">
+        <div class="Container100 BackgroundWhite">
             <div class="ContainerIndent">
                 <ui:fragment rendered="#{tcmpb.pagemanager.page == 0}">
                     <ui:include src="/pages/consumer/tcm/cadd/p1.xhtml"/>
