--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
@@ -12,58 +12,58 @@
         <div class="ContainerIndent">
             <div class="Wid100 Responsive100 Fleft">
                 <h3 class="BigTopic">
-                    Asset Allocation
+                    #{tcmpb.fixedModelName} - Asset Allocation
                 </h3>
             </div>
         </div>
     </div>
     <div class="Container100 Responsive100">
-            <div class="Container50 Responsive50 Fleft">
-               <div class="Container100">
-                        <p:outputPanel deferred="true">
-                            <p:chart type="pie" model="#{tcmpb.charts.pieChart}" style="height: 200px; width: 100%;"
-                                     rendered="#{tcmpb.charts.pieChart != null}"
-                                     responsive="true"/>
-                        </p:outputPanel>
-                    </div>
+        <div class="Container50 Responsive50 Fleft">
+            <div class="Container100">
+                <p:outputPanel deferred="true">
+                    <p:chart type="pie" model="#{tcmpb.charts.pieChart}" style="height: 200px; width: 100%;"
+                             rendered="#{tcmpb.charts.pieChart != null}"
+                             responsive="true"/>
+                </p:outputPanel>
             </div>
-            <div class="Container50 Responsive50 Fleft assetAllocationTableMobView">
-                    <p:dataTable styleClass="invAllocTable"
-                                 value="#{tcmpb.editableAsset}"
-                                 var="assetList">
+        </div>
+        <div class="Container50 Responsive50 Fleft assetAllocationTableMobView">
+            <p:dataTable styleClass="invAllocTable"
+                         value="#{tcmpb.editableAsset}"
+                         var="assetList">
 
-                        <p:column style="width: 1%; background-color: #{assetList.color};">
-                            <h:outputText value=" "/>
-                        </p:column>
+                <p:column style="width: 1%; background-color: #{assetList.color};">
+                    <h:outputText value=" "/>
+                </p:column>
 
-                        <p:column styleClass="Wid30 Fs14 TexAlLeft"
-                                  headerText="Asset">
-                            <h:outputText value="#{assetList.asset}"/>
+                <p:column styleClass="Wid30 Fs14 TexAlLeft"
+                          headerText="Asset">
+                    <h:outputText value="#{assetList.asset}"/>
+                </p:column>
+                <p:column styleClass="Wid20 Fs14 num-text-align TexAlRight"
+                          headerText="Weight"><!-- ROHIT's CHANGE -->
+                    <h:outputText value="#{assetList.userEdit}">
+                        <f:convertNumber pattern="##0.00%"/>
+                    </h:outputText>
+                </p:column>
+                <p:column styleClass="Wid30 Fs14 num-text-align TexAlRight"
+                          headerText="Value"><!-- ROHIT's CHANGE -->
+                    <h:outputText value="#{assetList.value}">
+                        <f:convertNumber currencySymbol="$" type="currency"/>
+                    </h:outputText>
+                </p:column>
+                <p:columnGroup type="footer">
+                    <p:row>
+                        <p:column colspan="3" styleClass="Fs14 TexAlLeft FontBold"
+                                  footerText="Total">
                         </p:column>
-                        <p:column styleClass="Wid20 Fs14 num-text-align TexAlRight"
-                                  headerText="Weight"><!-- ROHIT's CHANGE -->
-                            <h:outputText value="#{assetList.userEdit}">
-                                <f:convertNumber pattern="##0.00%"/>
-                            </h:outputText>
+                        <p:column styleClass="Fs14 TexAlRight FontBold"
+                                  footerText="#{dataDisplayConverter.displayAsMoney(tcmpb.totalMoneyAllocated)}">
                         </p:column>
-                        <p:column styleClass="Wid30 Fs14 num-text-align TexAlRight"
-                                  headerText="Value"><!-- ROHIT's CHANGE -->
-                            <h:outputText value="#{assetList.value}">
-                                <f:convertNumber currencySymbol="$" type="currency"/>
-                            </h:outputText>
-                        </p:column>
-                        <p:columnGroup type="footer">
-                            <p:row>
-                                <p:column colspan="3" styleClass="Fs14 TexAlLeft FontBold"
-                                          footerText="Total">
-                                </p:column>
-                                <p:column styleClass="Fs14 TexAlRight FontBold" 
-                                          footerText="#{dataDisplayConverter.displayAsMoney(tcmpb.totalMoneyAllocated)}">
-                                </p:column>
-                            </p:row>
-                        </p:columnGroup>
-                    </p:dataTable>
-            </div>
+                    </p:row>
+                </p:columnGroup>
+            </p:dataTable>
+        </div>
         <div class="EmptyBox20"></div>
         <p:commandButton styleClass="prev" value="Start Over"
                          update=":ceForm:inputArea"
@@ -75,6 +75,7 @@
 
     </div>
 </p:fieldset>
+
 <div class="EmptyBox10"></div>
 <p:fieldset legend="Detail" toggleable="true" toggleSpeed="500">
     <div class="Container100 Responsive100">
@@ -145,73 +146,73 @@
     </p:outputPanel>
 
     <div class="Container100">
-            <p:dataTable var="ticker" value="#{tcmpb.displayPortfolioList}">
+        <p:dataTable var="ticker" value="#{tcmpb.displayPortfolioList}">
 
-                <p:column style="width:1%; background-color: #{ticker.color}">
-                    <h:outputText value=" "/>
-                </p:column>
+            <p:column style="width:1%; background-color: #{ticker.color}">
+                <h:outputText value=" "/>
+            </p:column>
 
-                <p:column priority="4" style="width:14%;" styleClass="Fs12 TexAlLeft">
-                    <f:facet name="header">
-                        <h:outputText value="Asset"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.assetType}"/>
-                </p:column>
+            <p:column priority="4" style="width:14%;" styleClass="Fs12 TexAlLeft">
+                <f:facet name="header">
+                    <h:outputText value="Asset"/>
+                </f:facet>
+                <h:outputText value="#{ticker.assetType}"/>
+            </p:column>
 
-                <p:column style="width:17%;" styleClass="Fs12 TexAlLeft">
-                    <f:facet name="header">
-                        <h:outputText value="Class"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.subclass}"/>
-                </p:column>
+            <p:column style="width:17%;" styleClass="Fs12 TexAlLeft">
+                <f:facet name="header">
+                    <h:outputText value="Class"/>
+                </f:facet>
+                <h:outputText value="#{ticker.subclass}"/>
+            </p:column>
 
-                <p:column style="width:15%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
-                    <f:facet name="header">
-                        <h:outputText value="Allocated"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.weight}">
-                        <f:convertNumber pattern="##0.00%"/>
-                    </h:outputText>
-                </p:column>
+            <p:column style="width:15%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
+                <f:facet name="header">
+                    <h:outputText value="Allocated"/>
+                </f:facet>
+                <h:outputText value="#{ticker.weight}">
+                    <f:convertNumber pattern="##0.00%"/>
+                </h:outputText>
+            </p:column>
 
-                <p:column style="width:10%;" styleClass="Fs12 TexAlLeft">
-                    <f:facet name="header">
-                        <h:outputText value="Ticker"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.symbol}"/>
-                </p:column>
+            <p:column style="width:10%;" styleClass="Fs12 TexAlLeft">
+                <f:facet name="header">
+                    <h:outputText value="Ticker"/>
+                </f:facet>
+                <h:outputText value="#{ticker.symbol}"/>
+            </p:column>
 
-                <p:column priority="3" style="width:25%;" styleClass="Fs12 TexAlLeft">
-                    <f:facet name="header">
-                        <h:outputText value="Name"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.name}"/>
-                </p:column>
+            <p:column priority="3" style="width:25%;" styleClass="Fs12 TexAlLeft">
+                <f:facet name="header">
+                    <h:outputText value="Name"/>
+                </f:facet>
+                <h:outputText value="#{ticker.name}"/>
+            </p:column>
 
-                <p:column style="width:18%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
-                    <f:facet name="header">
-                        <h:outputText value="Value"/>
-                    </f:facet>
-                    <h:outputText value="#{ticker.value}">
-                        <f:convertNumber currencySymbol="$" type="currency"/>
-                    </h:outputText>
-                </p:column>
+            <p:column style="width:18%;" styleClass="Fs12 num-text-align TexAlRight"><!-- ROHIT's CHANGE -->
+                <f:facet name="header">
+                    <h:outputText value="Value"/>
+                </f:facet>
+                <h:outputText value="#{ticker.value}">
+                    <f:convertNumber currencySymbol="$" type="currency"/>
+                </h:outputText>
+            </p:column>
 
-                <p:columnGroup type="footer">
-                    <p:row>
-                        <p:column/>
-                        <p:column priority="4"/>
-                        <p:column colspan="3" styleClass="Fs14 TexAlLeft FontBold"
-                                  footerText="Total">
-                        </p:column>
-                        <p:column priority="3"/>
+            <p:columnGroup type="footer">
+                <p:row>
+                    <p:column/>
+                    <p:column priority="4"/>
+                    <p:column colspan="3" styleClass="Fs14 TexAlLeft FontBold"
+                              footerText="Total">
+                    </p:column>
+                    <p:column priority="3"/>
 
-                        <p:column styleClass="Fs14 TexAlRight FontBold"
-                                  footerText="#{dataDisplayConverter.displayAsMoney(tcmpb.totalMoneyAllocated)}">
-                        </p:column>
-                    </p:row>
-                </p:columnGroup>
-            </p:dataTable>
+                    <p:column styleClass="Fs14 TexAlRight FontBold"
+                              footerText="#{dataDisplayConverter.displayAsMoney(tcmpb.totalMoneyAllocated)}">
+                    </p:column>
+                </p:row>
+            </p:columnGroup>
+        </p:dataTable>
 
     </div>
 </p:fieldset>
@@ -368,20 +369,20 @@
 <!-- BOX END -->
 
 
-    <!-- <div class="Container100 Responsive100">
-            <p:outputPanel>
-                <p style="font-style: italic; font-size: .8em; text-align:justify">
-                  
-                    This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
-                    (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
-                    It does not take in affect any tax withholdings or distributions.
-                    Past performance is no guarantee of future results. Any historical returns,
-                    expected returns, or probability projections may not reflect actual future
-                    performance. All securities involve risk and may result in loss. Not an offer,
-                    solicitation of an offer, or advice to buy or sell securities in jurisdictions
-                    where Invessence is not registered
-                   
-                </p>
-            </p:outputPanel>
-       </div> -->
+<!-- <div class="Container100 Responsive100">
+        <p:outputPanel>
+            <p style="font-style: italic; font-size: .8em; text-align:justify">
+
+                This portfolio is designed for illustration purposes only. The cumulative value of the portfolio
+                (net of fees) is based on the historical performance of the underlying securities and adjusted for changes in the asset allocation over time.
+                It does not take in affect any tax withholdings or distributions.
+                Past performance is no guarantee of future results. Any historical returns,
+                expected returns, or probability projections may not reflect actual future
+                performance. All securities involve risk and may result in loss. Not an offer,
+                solicitation of an offer, or advice to buy or sell securities in jurisdictions
+                where Invessence is not registered
+
+            </p>
+        </p:outputPanel>
+   </div> -->
 </ui:composition>
