--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -17,6 +17,8 @@
                     <p:selectOneRadio id="p3id" value="#{tcmpb.riskCalculator.ans3}"
                                       layout="pageDirection"
                                       required="true" requiredMessage="Please choose one of these choices">
+                        <p:ajax listener="#{tcmpb.onChangeValue}"
+                                update=":ceForm:inputArea"/>
                         <f:selectItem itemLabel="Maximize Current Income" itemValue="1" />
                         <f:selectItem itemLabel="Emphasizing income with some potential for growth" itemValue="2" />
                         <f:selectItem itemLabel="Emphasizing growth with some potential for income" itemValue="3" />
