--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
@@ -6,74 +6,78 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 Fleft Responsive100 MarginTopRes">
-    <div class="ContainerIndent">
-        <div class="Container10 Responsive0" style="height:1px;"></div>
-                <div class="Container80 Responsive100">
-                        <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
-                            <div class="ContainerIndent">
-                                <div class="EmptyBox5"></div>
-                                <span class="Fs14 DispBlock gray">Investment Risk</span>
+        <div class="ContainerIndent">
+            <div class="Container10 Responsive0" style="height:1px;"></div>
+            <div class="Container80 Responsive100">
+                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
+                    <div class="ContainerIndent">
+                        <div class="EmptyBox5"></div>
+                        <span class="Fs14 DispBlock gray">Investment Risk</span>
                                     <span class="Fs24 DispBlock red">
                                     <h:outputText value="#{tcmpb.totalRisk}">
                                         <f:convertNumber pattern="##0.00%"/>
                                     </h:outputText>
                                    </span>
 
-                                <div class="EmptyBox5"></div>
-                            </div>
-                        </div>
-<div class="Wid10 Fright" style="height:1px;"></div>
-                        <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
-                            <div class="ContainerIndent">
-                                <div class="EmptyBox5"></div>
-                                <span class="Fs14 DispBlock gray">Expected Return</span>
+                        <div class="EmptyBox5"></div>
+                    </div>
+                </div>
+                <div class="Wid10 Fright" style="height:1px;"></div>
+                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth UI-tcm">
+                    <div class="ContainerIndent">
+                        <div class="EmptyBox5"></div>
+                        <span class="Fs14 DispBlock gray">Expected Return</span>
                                     <span class="Fs24 DispBlock invessenceblue">
                                       <h:outputText value="#{tcmpb.totalExpectedReturns}">
                                           <f:convertNumber pattern="##0.00%"/>
                                       </h:outputText>
                                      </span>
 
-                                <div class="EmptyBox5"></div>
-                            </div>
-                        </div>
+                        <div class="EmptyBox5"></div>
+                    </div>
                 </div>
+            </div>
 
-                <div class="Container100 Responsive100">
+            <div class="Container100 Responsive100">
                 <div class="Container10 Responsive0" style="height:1px;"></div>
                 <div class="Container80 Responsive100">
-                        <div class="Container50  Fleft Responsive50">
-                            <div class="Container100">
-                                <p:chart type="pie" model="#{tcmpb.charts.pieChart}" styleClass="PieGraphPosition" style="height:200px; width: 100%;"
-                                         rendered="#{tcmpb.charts.pieChart != null}"
-                                         responsive="true"/>
-                            </div>
+                    <div class="Container50  Fleft Responsive50">
+                        <div class="TexAlCenter">
+                        <h1>#{tcmpb.fixedModelName}</h1>
                         </div>
-                        <div class="Container50 Fleft Responsive50">
-                                <p:dataTable styleClass="invAllocTable"
-                                             value="#{tcmpb.editableAsset}"
-                                             var="assetList">
-
-                                    <p:column style="width: 2%; background-color: #{assetList.color};">
-                                        <h:outputText value=" "/>
-                                    </p:column>
-
-                                    <p:column styleClass="Wid60 TexAlLeft"
-                                              resizable="true" headerText="Asset"><!-- ROHIT's CHANGE -->
-                                        <h:outputText value="#{assetList.asset}"/>
-                                    </p:column>
-                                    <p:column styleClass="Wid35 num-text-align TexAlRight"
-                                              resizable="true" headerText="Weight"><!-- ROHIT's CHANGE -->
-                                        <h:outputText value="#{assetList.userEdit}">
-                                            <f:convertNumber pattern="##0.00%"/>
-                                        </h:outputText>
-                                    </p:column>
-                                </p:dataTable>
+                        <div class="Container100">
+                            <p:chart type="pie" model="#{tcmpb.charts.pieChart}" styleClass="PieGraphPosition"
+                                     style="height:200px; width: 100%;"
+                                     rendered="#{tcmpb.charts.pieChart != null}"
+                                     responsive="true"/>
+                        </div>
                     </div>
-                    
+                    <div class="Container50 Fleft Responsive50">
+                        <p:dataTable styleClass="invAllocTable"
+                                     value="#{tcmpb.editableAsset}"
+                                     var="assetList">
 
-                        </div>
+                            <p:column style="width: 2%; background-color: #{assetList.color};">
+                                <h:outputText value=" "/>
+                            </p:column>
+
+                            <p:column styleClass="Wid60 TexAlLeft"
+                                      resizable="true" headerText="Asset"><!-- ROHIT's CHANGE -->
+                                <h:outputText value="#{assetList.asset}"/>
+                            </p:column>
+                            <p:column styleClass="Wid35 num-text-align TexAlRight"
+                                      resizable="true" headerText="Weight"><!-- ROHIT's CHANGE -->
+                                <h:outputText value="#{assetList.userEdit}">
+                                    <f:convertNumber pattern="##0.00%"/>
+                                </h:outputText>
+                            </p:column>
+                        </p:dataTable>
+                    </div>
+
+
                 </div>
-                </div>
+            </div>
+        </div>
     </div>
 
 </ui:composition>
